--- a/style.css
+++ b/style.css
@@ -98,3 +98,40 @@ header {
   width: 20px;
   cursor: pointer;
 }
+
+/* main */
+
+main {
+  padding: 4rem 3rem;
+}
+
+.project-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 32px;
+
+  margin-top: 40px;
+}
+
+.project-wrapper > div {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.144);
+}
+
+.project-img {
+  height: 250px;
+}
+
+.project-desc {
+  padding: 2rem;
+  background-color: white;
+}
+
+.project-desc img {
+  width: 20px;
+}
+
+.project-desc > div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
