--- a/style.css
+++ b/style.css
@@ -58,6 +58,16 @@ ol {
 header {
   padding: 4rem 3rem;
   background: linear-gradient(173deg, rgba(35, 35, 189, 0.63) 75%, white 30%);
+  position: relative;
+}
+
+.about-me-wrapper > p {
+  position: absolute;
+  color: white;
+  font-size: 32px;
+  bottom: 60px;
+  left: 135.3px;
+  text-shadow: 0px 4px 30px rgba(0, 0, 0, 0.7);
 }
 
 .about-me-wrapper {
@@ -87,6 +97,10 @@ header {
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.139);
 }
 
+.about-me > p {
+  margin-top: 12px;
+}
+
 .icon {
   display: flex;
   justify-content: end;
@@ -107,7 +121,7 @@ main {
 
 .project-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   gap: 32px;
 
   margin-top: 40px;
@@ -128,10 +142,69 @@ main {
 
 .project-desc img {
   width: 20px;
+  cursor: pointer;
 }
 
 .project-desc > div {
   display: flex;
   justify-content: space-between;
   margin-bottom: 12px;
+}
+
+/* contact */
+
+footer {
+  padding: 4rem 3rem;
+  background-color: #7474d5;
+}
+
+.contact-wrapper {
+  display: flex;
+  gap: 30px;
+}
+
+.contact-info {
+  width: 50%;
+}
+
+.contact-info > p {
+  margin-top: 20px;
+}
+
+.contact-info img {
+  width: 30px;
+}
+
+.email,
+.phone {
+  display: flex;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.contact-info > .icon {
+  justify-content: start;
+}
+
+.contact-img {
+  width: 70%;
+  background-image: url(asset/pexels-divinetechygirl-1181534.jpg);
+  background-size: cover;
+}
+
+.phone {
+  margin-top: 20px;
+}
+
+footer p,
+footer h2,
+footer img {
+  color: white;
+}
+
+
+/* break point for tablet */
+
+@media screen and (max-width: 1024) {
+  
 }
