--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
   font-size: 32px;
   bottom: 60px;
   left: 135.3px;
-  text-shadow: 0px 4px 30px rgba(0, 0, 0, 0.7);
+  text-shadow: 0px 4px 30px rgba(0, 0, 0, 0.9);
 }
 
 .about-me-wrapper {
@@ -232,5 +232,66 @@ footer img {
   main,
   footer {
     padding: 1.5rem 1rem;
+  }
+
+  header {
+    background: linear-gradient(173deg, rgba(35, 35, 189, 0.63) 35%, white 30%);
+  }
+
+  .about-me-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-me-wrapper .about-me-img {
+    width: 70%;
+    height: 450px;
+    margin-bottom: 30px;
+  }
+  .about-me-wrapper .about-me {
+    width: 100%;
+    box-shadow: none;
+  }
+  .about-me-wrapper > p {
+    top: 400px;
+    left: 50%;
+    transform: translate(-50%);
+  }
+
+  .about-me > h1 {
+    text-align: center;
+  }
+  .about-me > p {
+    text-align: left;
+  }
+
+  .icon {
+    justify-content: center;
+    gap: 32px;
+  }
+
+  .icon img {
+    width: 32px;
+  }
+
+  .contact-wrapper {
+    flex-direction: column;
+  }
+
+  .contact-img {
+    width: 100%;
+    height: 450px;
+    transform: scale(1.1);
+  }
+  .contact-info {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+
+  footer h2 {
+    text-align: center;
+  }
+  .contact-info > .icon {
+    justify-content: center;
   }
 }
